finally it is done

--- a/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
+++ b/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
@@ -15,6 +15,10 @@
         <input type="text" id="filmgenre" />
         <label>Date of publish</label>
         <input type="number" id="filmdate" />
+        <label>Actor's ID</label>
+        <input type="number" id="filmactor" />
+        <label>Director's ID</label>
+        <input type="number" id="filmdirector" />
         <button type="button" onclick="create()"> Add Film</button>
 
 
