--- a/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
+++ b/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
@@ -20,11 +20,7 @@
         <label>Director's ID</label>
         <input type="number" id="filmdirector" />
         <button type="button" onclick="create()"> Add Film</button>
-
-
     </div>
-
-
     <table>
         <thead>
             <tr>
@@ -32,6 +28,8 @@
                 <th>Title</th>
                 <th>Genre</th>
                 <th>Date of publish</th>
+                <th>Actor ID</th>
+                <th>Director ID</th>
                 <th>Actions</th>
             </tr>
         </thead>
