--- a/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
+++ b/HBSJ64_HFT_2021221.JSClient/wwwroot/index.html
@@ -19,7 +19,20 @@
         <input type="number" id="filmactor" />
         <label>Director's ID</label>
         <input type="number" id="filmdirector" />
-        <button type="button" onclick="create()"> Add Film</button>
+        <button type="button" onclick="create()">Add Movie</button>
+    </div>
+    <div id="updateformdiv">
+        <p> <label>Title</label> </p>
+        <input type="text" id="filmtitleupdate" />
+        <label>Genre</label>
+        <input type="text" id="filmgenreupdate" />
+        <label>Date of publish</label>
+        <input type="number" id="filmdateupdate" />
+        <label>Actor's ID</label>
+        <input type="number" id="filmactorupdate" />
+        <label>Director's ID</label>
+        <input type="number" id="filmdirectorupdate" />
+        <button type="button" onclick="update()">Update Movie</button>
     </div>
     <table>
         <thead>
@@ -30,7 +43,8 @@
                 <th>Date of publish</th>
                 <th>Actor ID</th>
                 <th>Director ID</th>
-                <th>Actions</th>
+                <th>Delete</th>
+                <th>Update</th>
             </tr>
         </thead>
         <tbody id="resultarea">
